--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .background {
 	height: 100vh;
 	width: 100vw;
-	background: url('images/gettyimages-1227506204-e1642494346148.jpg') no-repeat center center fixed;
+	background: url('https://raw.githubusercontent.com/kaizhelam/Flappy-Bird-Game/main/images/background-img.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
